--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,13 +7,11 @@
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
+        android:name=".ESRN15App"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.ESRN15"
         tools:targetApi="31">
-        <activity
-            android:name=".CalendarioActivity"
-            android:exported="false" />
         <activity
             android:name=".ui.mainActivity.MainActivity"
             android:exported="true">
